# face_comm

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt  setup.sh  uninstall.sh
config/: melodies.yaml  phrases.yaml  settings.yaml  thresholds.yaml
docs/: cost_estimate.md  operation_manual.md  setup_guide.md  user_manual.md
src/: __init__.py  gesture_detector.py  main.py
src/audio/: __init__.py
src/controllers/: __init__.py
src/ui/: __init__.py
src/utils/: config_loader.py  logger.py
src/web/: __init__.py  app.py  frame_processor.py  websocket_handler.py
static/: index.html
static/css/: main.css
static/js/: app.js  camera.js  ui.js  websocket.js
tests/: test_gesture.py
